# driftwatcher

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
examples/: basic.md  glob-patterns.md  root-paths.md
openspec/: project.md
src/: frontmatter.rs  hash.rs  main.rs  paths.rs  scanner.rs  status.rs
src/commands/: add.rs  check.rs  init.rs  mod.rs  report.rs  validate.rs
