[package]
name = "driftwatcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drifty"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
dialoguer = "0.11"
sha2 = "0.10"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
